force-app/main/default/objects/CampaignMember/fields/Aim__c.field-meta.xml
<CustomField>
    <fullName>Aim__c</fullName>
    <label>Ergebnis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hat Interesse</fullName>
            </value>
            <value>
                <fullName>Interesse an Beratungstermin</fullName>
            </value>
            <value>
                <fullName>Interesse an Termin mit MB</fullName>
            </value>
            <value>
                <fullName>Reserviert</fullName>
            </value>
            <value>
                <fullName>Unterlagen zuschicken</fullName>
            </value>
            <value>
                <fullName>Gezeichnet</fullName>
            </value>
            <value>
                <fullName>Hat kein Interesse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>