force-app/main/default/objects/CampaignMember/fields/Anmeldung__c.field-meta.xml
<CustomField>
    <fullName>Anmeldung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anmeldung</label>
    <type>Checkbox</type>
</CustomField>