force-app/main/default/objects/CampaignMember/fields/Anruf_Beschreibung__c.field-meta.xml
<CustomField>
    <fullName>Anruf_Beschreibung__c</fullName>
    <label>Anruf Beschreibung</label>
    <type>TextArea</type>
</CustomField>