force-app/main/default/objects/CampaignMember/fields/Bearbeiter__c.field-meta.xml
<CustomField>
    <fullName>Bearbeiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bearbeiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bearbeiter</relationshipName>
    <type>Lookup</type>
</CustomField>