force-app/main/default/objects/CampaignMember/fields/ClickmeetingId__c.field-meta.xml
<CustomField>
    <fullName>ClickmeetingId__c</fullName>
    <formula>Campaign.ClickmeetingId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clickmeeting Id</label>
    <type>Text</type>
</CustomField>