force-app/main/default/objects/CampaignMember/fields/ContactOwner__c.field-meta.xml
<CustomField>
    <fullName>ContactOwner__c</fullName>
    <formula>Contact.Owner.FirstName + &apos; &apos; + Contact.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kontaktinhaber</label>
    <type>Text</type>
</CustomField>