force-app/main/default/objects/CampaignMember/fields/Dritte_Anrufversuch_Datum__c.field-meta.xml
<CustomField>
    <fullName>Dritte_Anrufversuch_Datum__c</fullName>
    <label>Dritte Anrufversuch Datum</label>
    <type>DateTime</type>
</CustomField>