force-app/main/default/objects/CampaignMember/fields/Erste_Anrufversuch_Datum__c.field-meta.xml
<CustomField>
    <fullName>Erste_Anrufversuch_Datum__c</fullName>
    <label>Erste Anrufversuch Datum</label>
    <type>DateTime</type>
</CustomField>