force-app/main/default/objects/CampaignMember/fields/Erste_Anrufversuch_Ergebnis__c.field-meta.xml
<CustomField>
    <fullName>Erste_Anrufversuch_Ergebnis__c</fullName>
    <label>Anrufversuch Ergebnis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erreicht</fullName>
            </value>
            <value>
                <fullName>Nicht erreicht</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>