force-app/main/default/objects/CampaignMember/fields/hat_Interesse__c.field-meta.xml
<CustomField>
    <fullName>hat_Interesse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>hat Interesse</label>
    <type>Checkbox</type>
</CustomField>