force-app/main/default/objects/CampaignMember/fields/Helper_InternerZ_hler__c.field-meta.xml
<CustomField>
    <fullName>Helper_InternerZ_hler__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <label>Helper_InternerZähler</label>
    <type>AutoNumber</type>
</CustomField>