force-app/main/default/objects/CampaignMember/fields/Investorenzeitung__c.field-meta.xml
<CustomField>
    <fullName>Investorenzeitung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investorenzeitung</label>
    <type>Checkbox</type>
</CustomField>