force-app/main/default/objects/CampaignMember/fields/Kampagnentyp__c.field-meta.xml
<CustomField>
    <fullName>Kampagnentyp__c</fullName>
    <formula>TEXT(Campaign.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kampagnentyp</label>
    <type>Text</type>
</CustomField>