force-app/main/default/objects/CampaignMember/fields/kein_Interesse__c.field-meta.xml
<CustomField>
    <fullName>kein_Interesse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>kein Interesse</label>
    <type>Checkbox</type>
</CustomField>