force-app/main/default/objects/CampaignMember/fields/Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer__c</fullName>
    <formula>Campaign.Organizer__r.Maklerbetreuer_Wirtschaftshaus_2__r.FirstName + &apos; &apos; +  Campaign.Organizer__r.Maklerbetreuer_Wirtschaftshaus_2__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerbetreuer</label>
    <type>Text</type>
</CustomField>