force-app/main/default/objects/CampaignMember/fields/nicht_erreicht__c.field-meta.xml
<CustomField>
    <fullName>nicht_erreicht__c</fullName>
    <defaultValue>false</defaultValue>
    <label>nicht erreicht</label>
    <type>Checkbox</type>
</CustomField>