force-app/main/default/objects/CampaignMember/fields/Telefonkampagne_Ergebnis__c.field-meta.xml
<CustomField>
    <fullName>Telefonkampagne_Ergebnis__c</fullName>
    <label>Telefonkampagne Ergebnis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interesse</fullName>
            </value>
            <value>
                <fullName>Kein Interesse</fullName>
            </value>
            <value>
                <fullName>Interesse / Keine Zeit</fullName>
            </value>
            <value>
                <fullName>Interesse / Unterlagen verschickt</fullName>
            </value>
            <value>
                <fullName>Termin vereinbart</fullName>
            </value>
            <value>
                <fullName>Termin bestätigt</fullName>
            </value>
            <value>
                <fullName>Termin wahrgenommen</fullName>
            </value>
            <value>
                <fullName>Termin nicht wahrgenommen</fullName>
            </value>
            <value>
                <fullName>Erneut Termin vereinbart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>