force-app/main/default/objects/CampaignMember/fields/Telefontermin__c.field-meta.xml
<CustomField>
    <fullName>Telefontermin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telefontermin</label>
    <type>Checkbox</type>
</CustomField>