force-app/main/default/objects/CampaignMember/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Typ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oberkampagne</fullName>
            </value>
            <value>
                <fullName>Werbung</fullName>
            </value>
            <value>
                <fullName>E-Mailing</fullName>
            </value>
            <value>
                <fullName>Post-Mailing</fullName>
            </value>
            <value>
                <fullName>Sachwertveranstaltung</fullName>
            </value>
            <value>
                <fullName>Beratungstage</fullName>
            </value>
            <value>
                <fullName>Mediterraner Abend</fullName>
            </value>
            <value>
                <fullName>Ostseeabend</fullName>
            </value>
            <value>
                <fullName>Maklerzirkel</fullName>
            </value>
            <value>
                <fullName>Marketing-Event</fullName>
            </value>
            <value>
                <fullName>Vertriebs-Event/Aktionstag</fullName>
            </value>
            <value>
                <fullName>Kundenveranstaltung</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Online-Seminar</fullName>
            </value>
            <value>
                <fullName>Besichtigung</fullName>
            </value>
            <value>
                <fullName>Abnahme</fullName>
            </value>
            <value>
                <fullName>Messe</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Konferenz</fullName>
            </value>
            <value>
                <fullName>Fest/Feier</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Bannerwerbung</fullName>
            </value>
            <value>
                <fullName>PR Aktion</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Weiterempfehlungsprogramm</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>