force-app/main/default/objects/CampaignMember/fields/WebinarDateTime__c.field-meta.xml
<CustomField>
    <fullName>WebinarDateTime__c</fullName>
    <label>Webinar Datum und Uhrzeit</label>
    <type>DateTime</type>
</CustomField>