force-app/main/default/objects/CampaignMember/fields/Zertifikatsnummer__c.field-meta.xml
<CustomField>
    <fullName>Zertifikatsnummer__c</fullName>
    <formula>IF(
    Campaign.Fortbildungsanerkennung__c = TRUE, 
    &quot;ZERT-&quot; &amp; TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; Helper_InternerZ_hler__c,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zertifikatsnummer</label>
    <type>Text</type>
</CustomField>