force-app/main/default/objects/CampaignMember/fields/zoom_app__Is_Registrant__c.field-meta.xml
<CustomField>
    <fullName>zoom_app__Is_Registrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Registrant</label>
    <type>Checkbox</type>
</CustomField>