force-app/main/default/objects/CampaignMember/fields/Zweite_Anrufversuch_Datum__c.field-meta.xml
<CustomField>
    <fullName>Zweite_Anrufversuch_Datum__c</fullName>
    <label>Zweite Anrufversuch Datum</label>
    <type>DateTime</type>
</CustomField>